# export-obsidian

./: README.md  pyproject.toml
export-obsidian/output_notes/: sample.txt
export-obsidian/src/export-obsidian/: export-obsidian.py
export-obsidian/test_notes/: second_note.md
export-obsidian/tst/: test.py
test_notes/: main_note.md  third_note.md
test_notes/documents/: sample.txt
test_notes/folder/: nested_note.md
