[project]
name = "scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Spencer",email = "matsp@amazon.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto (>=2.49.0,<3.0.0)",
    "boto3 (>=1.37.34,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "streamlit (>=1.32.0,<2.0.0)",
    "selenium (>=4.18.0,<5.0.0)",
    "webdriver-manager (>=4.0.1,<5.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
